# erot

./: .gitignore  pyproject.toml
src/: main.py
src/api/: exceptions.py
src/api/base/: extractor.py  mapping.py  model.py  objects.py  orm.py  schema.py  transformer.py
src/api/extractors/: excel.py
src/api/loaders/: database.py
src/api/mappings/: catalogues.py
src/api/transformers/: __init__.py  database.py  date.py  excel.py  object.py  text.py
src/api/transformers/fields/: date.py  text.py
src/config/: database.py
src/database/: custom_fields.py  helpers.py  migration.py
src/database/models/: __init__.py  erot.py
src/tasks/: celery.py  etl.py
tests/: conftest.py  test_classname.py  test_database.py  test_differ.py  test_erot_models.py  test_helpers.py  test_models.py  test_read_file.py  test_sanction_parser.py  test_sanction_single.py  test_subclass.py  test_text_array.py  test_text_transformers.py  test_unique_set.py  test_unpacking.py
