[tool.poetry]
name = "erot"
version = "0.1.0"
description = ""
authors = ["rsaleev <rs.aleev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.73.0"
asyncpg = "^0.25.0"
openpyxl = "^3.0.9"
aiohttp = "^3.8.1"
dictdiffer = "^0.9.0"
pypika-tortoise = "^0.1.3"
tortoise-orm = "^0.18.1"
orjson = "^3.6.7"
aerich = "^0.6.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-asyncio = "^0.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --capture=no --asyncio-mode=auto"
testpaths = [
    "tests"
]
